--- a/html-coding-conventions.html
+++ b/html-coding-conventions.html
@@ -1,31 +1,86 @@
 
-<!-- MY DOCUMENT PREFACE -->
+<!--
+    =========================
+    | MY CODING CONVENTIONS |
+    ==================================================================================================================================
+
+    ? @author:                 William J. Horn
+    ? @document:               html-coding-conventions.html
+    ? @document-created:       2/18/2022
+    ? @document-modified:      2/19/2022
+    ? @document-version:       1.1
+
+    ==================================================================================================================================
+
+    ? @document-description
+    ========================
+    | DOCUMENT DESCRIPTION |
+    ==================================================================================================================================
+
+    This document serves as a repository for my HTML coding practices.
+
+    ==================================================================================================================================
+
+    ? @document-api
+    == DOCUMENT API ==
+    N/A
+
+    ? @document-change-log
+    == CHANGE LOG == 
+    N/A
+-->
 
 <!--
-    Author:                     William J. Horn
-    Document:                   document-name.html
-    Created:                    x/xx/xxxx 12:00PM
-    Last Modified:              x/xx/xxxx 12:00PM
+    ============================
+    | ~~DOCUMENT HEADER HERE~~ |
+    ==================================================================================================================================
 
-    ================
-    == CHANGE LOG ==
-    ================
+    ? @author:                 William J. Horn
+    ? @document:               document name
+    ? @document-created:       xx/xx/xxxx
+    ? @document-modified:      xx/xx/xxxx
+    ? @document-version:       version number
 
-    ? @change-log-info
-    ----------------------------------------------------------------------------------------------------------------------------------
-    Change log is recorded with change id, denoted by: #change:xxxx-"description about change" where "xxxx" is a 4-digit hexadecimal. 
-    The change id index is recorded under "@change-log" and is where all information about the change(s) are stored. Within the 
-    document code, a change id is given near the sections of code that have been modified. The modified code is wrapped between two 
-    comment lines that read:
+    ==================================================================================================================================
+
+    ? @description (if applicable)
+    ========================
+    | DOCUMENT DESCRIPTION |
+    ==================================================================================================================================
+
+    ~~information about the document and it's purpose here~~
+
+    ==================================================================================================================================
+
+    ? @description (if not applicable)
+    ========================
+    | DOCUMENT DESCRIPTION |
+    ==================================================================================================================================
+    N/A
+
+    ? @change-log (if applicable)
+    ==============
+    | CHANGE LOG |
+    ==================================================================================================================================
+
+    ======================
+    == About Change Log ==
+    ======================
+
+    Changes to document code are recorded with change id, denoted by: #change:ID-"description about change" where "ID" is a hexadecimal 
+    number. The change id records are shown below, under "@change-log-records", and this is where all information about changes are 
+    stored. Within the document code, a change id is given near the sections of code that have been modified. The modified code is 
+    wrapped between two comment lines that read:
 
         THIS    #change:xxxx-"description about change" // BEGIN // 
         AND         ...[[code affected by change]]...
         THIS    #change:xxxx-"description about change" \\ END \\
 
     Other non-specific changes worth documenting will be listed below "OTHER:" within each change-log record.
+
     ----------------------------------------------------------------------------------------------------------------------------------
 
-    ? @change-log
+    ? @change-log-records
     ----------------------------------------------------------------------------------------------------------------------------------
     | Date: x/xx/xxxx |
     -------------------
@@ -52,27 +107,8 @@
         - general change #1
         - general change #2
     ----------------------------------------------------------------------------------------------------------------------------------
-    | Date: x/xx/xxxx |
-    -------------------
 
-    OTHER:
-        - general change #1
-        - general change #2
-    ----------------------------------------------------------------------------------------------------------------------------------
+
+
 -->
-
-<!DOCTYPE html>
-
-<html lang="en">
-
-    <head>
-
-    </head>
-
-    <body>
-        
-    </body>
-
-
-</html>
 
