html comment conventions

--- a/html-coding-conventions.html
+++ b/html-coding-conventions.html
@@ -6,15 +6,15 @@
 
     ? @author:                 William J. Horn
     ? @document:               html-coding-conventions.html
-    ? @document-created:       2/18/2022
-    ? @document-modified:      2/19/2022
+    ? @document-created:       02/18/2022
+    ? @document-modified:      02/19/2022
     ? @document-version:       1.1
 
     ==================================================================================================================================
 
-    ? @document-description
-    ========================
-    | DOCUMENT DESCRIPTION |
+    ? @document-about
+    ==================
+    | ABOUT DOCUMENT |
     ==================================================================================================================================
 
     This document serves as a repository for my HTML coding practices.
@@ -22,93 +22,72 @@
     ==================================================================================================================================
 
     ? @document-api
-    == DOCUMENT API ==
+    ================
+    | DOCUMENT API |
+    ==================================================================================================================================
+
     N/A
 
-    ? @document-change-log
-    == CHANGE LOG == 
-    N/A
+    ==================================================================================================================================
+
+    ? @document-changelog
+    ======================
+    | DOCUMENT CHANGELOG |
+    ==================================================================================================================================
+
+    For all changelog history, navigate to the changelog folder within this file's directory and open the file named:
+
+    <this file's name>(<this file type>)-changelog
+
+    Where <this file's name> is the name of this file and <this file type> is this file type's extension. For example, if this
+    file was named "index.html", the changelog file would be named "index(html)-changelog".
+
+    ==================================================================================================================================
 -->
 
 <!--
-    ============================
-    | ~~DOCUMENT HEADER HERE~~ |
+    =======================
+    | ~~DOCUMENT HEADER~~ |
     ==================================================================================================================================
 
     ? @author:                 William J. Horn
-    ? @document:               document name
+    ? @document:               document-type.extension
     ? @document-created:       xx/xx/xxxx
     ? @document-modified:      xx/xx/xxxx
-    ? @document-version:       version number
+    ? @document-version:       x
 
     ==================================================================================================================================
 
-    ? @description (if applicable)
-    ========================
-    | DOCUMENT DESCRIPTION |
+    ? @document-about
+    ==================
+    | ABOUT DOCUMENT |
     ==================================================================================================================================
 
-    ~~information about the document and it's purpose here~~
+    Information about document here
 
     ==================================================================================================================================
 
-    ? @description (if not applicable)
-    ========================
-    | DOCUMENT DESCRIPTION |
-    ==================================================================================================================================
-    N/A
-
-    ? @change-log (if applicable)
-    ==============
-    | CHANGE LOG |
+    ? @document-api
+    ================
+    | DOCUMENT API |
     ==================================================================================================================================
 
+    API of document here
+
+    ==================================================================================================================================
+
+    ? @document-changelog
     ======================
-    == About Change Log ==
-    ======================
+    | DOCUMENT CHANGELOG |
+    ==================================================================================================================================
 
-    Changes to document code are recorded with change id, denoted by: #change:ID-"description about change" where "ID" is a hexadecimal 
-    number. The change id records are shown below, under "@change-log-records", and this is where all information about changes are 
-    stored. Within the document code, a change id is given near the sections of code that have been modified. The modified code is 
-    wrapped between two comment lines that read:
+    For all changelog history, navigate to the changelog folder within this file's directory and open the file named...
 
-        THIS    #change:xxxx-"description about change" // BEGIN // 
-        AND         ...[[code affected by change]]...
-        THIS    #change:xxxx-"description about change" \\ END \\
+    <this file's name>(<this file type>)-changelog
 
-    Other non-specific changes worth documenting will be listed below "OTHER:" within each change-log record.
+    ...where <this file's name> is the name of this file and <this file type> is this file type's extension. For example, if this
+    file was named "index.html", the changelog file would be named "index(html)-changelog"
 
-    ----------------------------------------------------------------------------------------------------------------------------------
-
-    ? @change-log-records
-    ----------------------------------------------------------------------------------------------------------------------------------
-    | Date: x/xx/xxxx |
-    -------------------
-
-    ?info: meant for replacing bad code with good code that has the SAME behavior
-    * #change:0000-"replaced ..."           
-        -   replaced A with B
-
-    ?info: meant for removing A behavior of the program entirely
-    * #change:0001-"removed ..."          
-        !-  removed X
-            because Y
-
-    ?info: meant for changing A behavior of the program
-    * #change:0002-"modified ..."          
-        -   modified X such that X did X and now it does Y
-
-    ?info: meant for fixing code that fails expectation
-    * #change:0003-"fixed ..."              
-        -   fixed X such that X used to fail and now it succeeds
-
-    ?info: meant for other general changes that don't apply to a non-central region of code
-    OTHER: 
-        - general change #1
-        - general change #2
-    ----------------------------------------------------------------------------------------------------------------------------------
-
-
-
+    ==================================================================================================================================
 -->
 
