syntax changes to change log

--- a/universal-conventions/document-preface.html
+++ b/universal-conventions/document-preface.html
@@ -86,10 +86,10 @@
     ? @document-changelog-detailed
     For all changelog history, navigate to the changelog folder within this file's directory and open the file named:
 
-    <this file's name>(<this file type>)-changelog
+    changelog_-<this file's name>(<this file type>)
 
     Where <this file's name> is the name of this file and <this file type> is this file type's extension. For example, if this
-    file was named "index.html", the changelog file would be named "index(html)-changelog".
+    file was named "index.html", the changelog file would be named "changelog_index(html)".
 
     ==================================================================================================================================
 
